Fix font size and spacing issues on mobile, maybe

--- a/narrow.css
+++ b/narrow.css
@@ -38,3 +38,7 @@
     height: 7vw;
     max-height: 30px;
 }
+
+.wide-space {
+    height: 1em;
+}
